// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page Banner Simple - primary renders correctly 1`] = `
<jest>
  <section
    class="ecl-page-banner ecl-page-banner--primary ecl-page-banner--centered"
  >
    <div
      class="ecl-container"
    >
      <div
        class="ecl-page-banner__container"
      >
        <div
          class="ecl-page-banner__content"
        >
          <div
            class="ecl-page-banner__title"
          >
            EU Budget for the future
          </div>
          <p
            class="ecl-page-banner__description"
          >
            <span
              class="ecl-page-banner__description-text"
            >
              Innovation, economy, environment and geopolitics
            </span>
          </p>
          <div
            class="ecl-page-banner__cta"
          >
            <a
              aria-label="Subscribe"
              class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Subscribe
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Page Banner Simple - secondary renders correctly 1`] = `
<jest>
  <section
    class="ecl-page-banner ecl-page-banner--secondary ecl-page-banner--centered"
  >
    <div
      class="ecl-container"
    >
      <div
        class="ecl-page-banner__container"
      >
        <div
          class="ecl-page-banner__content"
        >
          <div
            class="ecl-page-banner__title"
          >
            EU Budget for the future
          </div>
          <p
            class="ecl-page-banner__description"
          >
            <span
              class="ecl-page-banner__description-text"
            >
              Innovation, economy, environment and geopolitics
            </span>
          </p>
          <div
            class="ecl-page-banner__cta"
          >
            <a
              aria-label="Subscribe"
              class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Subscribe
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Page Banner Simple - white renders correctly 1`] = `
<jest>
  <section
    class="ecl-page-banner ecl-page-banner--white ecl-page-banner--centered"
  >
    <div
      class="ecl-container"
    >
      <div
        class="ecl-page-banner__container"
      >
        <div
          class="ecl-page-banner__content"
        >
          <div
            class="ecl-page-banner__title"
          >
            EU Budget for the future
          </div>
          <p
            class="ecl-page-banner__description"
          >
            <span
              class="ecl-page-banner__description-text"
            >
              Innovation, economy, environment and geopolitics
            </span>
          </p>
          <div
            class="ecl-page-banner__cta"
          >
            <a
              aria-label="Subscribe"
              class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Subscribe
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Page Banner Simple renders correctly with extra attributes 1`] = `
<jest>
  <section
    class="ecl-page-banner ecl-page-banner--primary ecl-page-banner--centered"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-container"
    >
      <div
        class="ecl-page-banner__container"
      >
        <div
          class="ecl-page-banner__content"
        >
          <div
            class="ecl-page-banner__title"
          >
            EU Budget for the future
          </div>
          <p
            class="ecl-page-banner__description"
          >
            <span
              class="ecl-page-banner__description-text"
            >
              Innovation, economy, environment and geopolitics
            </span>
          </p>
          <div
            class="ecl-page-banner__cta"
          >
            <a
              aria-label="Subscribe"
              class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Subscribe
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Page Banner Simple renders correctly with extra class names 1`] = `
<jest>
  <section
    class="ecl-page-banner ecl-page-banner--primary ecl-page-banner--centered custom-class custom-class--test"
  >
    <div
      class="ecl-container"
    >
      <div
        class="ecl-page-banner__container"
      >
        <div
          class="ecl-page-banner__content"
        >
          <div
            class="ecl-page-banner__title"
          >
            EU Budget for the future
          </div>
          <p
            class="ecl-page-banner__description"
          >
            <span
              class="ecl-page-banner__description-text"
            >
              Innovation, economy, environment and geopolitics
            </span>
          </p>
          <div
            class="ecl-page-banner__cta"
          >
            <a
              aria-label="Subscribe"
              class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Subscribe
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Page Banner image - gradient renders correctly 1`] = `
<jest>
  <section
    class="ecl-page-banner ecl-page-banner--image-gradient ecl-page-banner--centered"
  >
    <div
      class="ecl-page-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-page-banner__credit"
    >
      © Copyright or credit
    </div>
    <div
      class="ecl-container"
    >
      <div
        class="ecl-page-banner__container"
      >
        <div
          class="ecl-page-banner__content"
        >
          <div
            class="ecl-page-banner__title"
          >
            EU Budget for the future
          </div>
          <p
            class="ecl-page-banner__description"
          >
            <span
              class="ecl-page-banner__description-text"
            >
              Innovation, economy, environment and geopolitics
            </span>
          </p>
          <div
            class="ecl-page-banner__cta"
          >
            <a
              aria-label="Subscribe"
              class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Subscribe
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Page Banner image - shade renders correctly 1`] = `
<jest>
  <section
    class="ecl-page-banner ecl-page-banner--image-shade ecl-page-banner--centered"
  >
    <div
      class="ecl-page-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-page-banner__credit"
    >
      © Copyright or credit
    </div>
    <div
      class="ecl-container"
    >
      <div
        class="ecl-page-banner__container"
      >
        <div
          class="ecl-page-banner__content"
        >
          <div
            class="ecl-page-banner__title"
          >
            EU Budget for the future
          </div>
          <p
            class="ecl-page-banner__description"
          >
            <span
              class="ecl-page-banner__description-text"
            >
              Innovation, economy, environment and geopolitics
            </span>
          </p>
          <div
            class="ecl-page-banner__cta"
          >
            <a
              aria-label="Subscribe"
              class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Subscribe
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Page Banner image - text-box renders correctly 1`] = `
<jest>
  <section
    class="ecl-page-banner ecl-page-banner--image ecl-page-banner--centered"
  >
    <div
      class="ecl-page-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-page-banner__credit"
    >
      © Copyright or credit
    </div>
    <div
      class="ecl-container"
    >
      <div
        class="ecl-page-banner__container"
      >
        <div
          class="ecl-page-banner__content"
        >
          <div
            class="ecl-page-banner__title"
          >
            EU Budget for the future
          </div>
          <p
            class="ecl-page-banner__description"
          >
            <span
              class="ecl-page-banner__description-text"
            >
              Innovation, economy, environment and geopolitics
            </span>
          </p>
          <div
            class="ecl-page-banner__cta"
          >
            <a
              aria-label="Subscribe"
              class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Subscribe
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Page Banner image renders correctly with extra attributes 1`] = `
<jest>
  <section
    class="ecl-page-banner ecl-page-banner--image ecl-page-banner--centered"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-page-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-page-banner__credit"
    >
      © Copyright or credit
    </div>
    <div
      class="ecl-container"
    >
      <div
        class="ecl-page-banner__container"
      >
        <div
          class="ecl-page-banner__content"
        >
          <div
            class="ecl-page-banner__title"
          >
            EU Budget for the future
          </div>
          <p
            class="ecl-page-banner__description"
          >
            <span
              class="ecl-page-banner__description-text"
            >
              Innovation, economy, environment and geopolitics
            </span>
          </p>
          <div
            class="ecl-page-banner__cta"
          >
            <a
              aria-label="Subscribe"
              class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Subscribe
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;

exports[`Page Banner image renders correctly with extra class names 1`] = `
<jest>
  <section
    class="ecl-page-banner ecl-page-banner--image ecl-page-banner--centered custom-class custom-class--test"
  >
    <div
      class="ecl-page-banner__image"
      style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
    />
    <div
      class="ecl-page-banner__credit"
    >
      © Copyright or credit
    </div>
    <div
      class="ecl-container"
    >
      <div
        class="ecl-page-banner__container"
      >
        <div
          class="ecl-page-banner__content"
        >
          <div
            class="ecl-page-banner__title"
          >
            EU Budget for the future
          </div>
          <p
            class="ecl-page-banner__description"
          >
            <span
              class="ecl-page-banner__description-text"
            >
              Innovation, economy, environment and geopolitics
            </span>
          </p>
          <div
            class="ecl-page-banner__cta"
          >
            <a
              aria-label="Subscribe"
              class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
              href="/example"
            >
              <span
                class="ecl-link__label"
              >
                Subscribe
              </span>
              <svg
                aria-hidden="true"
                class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                focusable="false"
              >
                <use
                  xlink:href="/icons.svg#corner-arrow"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
    </div>
  </section>
</jest>
`;
